SystemUI : Fix Task Manager strings
Signed-off-by: dexmc <dextermcdew@gmail.com>

Change-Id: I8859259fdfdd055ae1adb204383a81dacea728c0

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -897,10 +897,10 @@
 
     <!-- Task Manager -->
     <string name="task_manager_title">Task Manager</string>
-    <string name="message_switch_fail">Can not switch to this task, because it has no interface.</string>
+    <string name="message_switch_fail">Cannot switch to this task, because it has no interface.</string>
     <string name="tasklist_killall">Kill All</string>
     <string name="tasklist_memory_usage">"Free/Total Memory: <xliff:g id="number">%s</xliff:g> / <xliff:g id="name">%s</xliff:g>"</string>
-    <string name="message_keep_one_launcher">Should keep at lease one home activity!</string>
+    <string name="message_keep_one_launcher">Should keep at least one home activity!</string>
 
     <!-- Footer device owned text [CHAR LIMIT=50] -->
     <string name="device_owned_footer">Device may be monitored</string>
