--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -2607,7 +2607,7 @@
     <string name="android_upgrading_fstrim">Optimizing storage.</string>
 
     <!-- [CHAR LIMIT=NONE] Message shown in upgrading dialog for each .apk that is optimized. -->
-    <string name="android_upgrading_apk">preparing galaxy
+    <string name="android_upgrading_apk">Upgrading Universe
         <xliff:g id="number" example="123">%1$d</xliff:g> of
         <xliff:g id="number" example="123">%2$d</xliff:g>.</string>
 
